Bug 432112 - Impossible to change the background of login manager with new SDDM KCM
Summary: Impossible to change the background of login manager with new SDDM KCM
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_sddm (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: VHI normal
Target Milestone: ---
Assignee: David Edmundson
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-01-25 18:07 UTC by Patrick Silva
Modified: 2022-09-23 03:13 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.21
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2021-01-25 18:07:14 UTC
STEPS TO REPRODUCE
1. open SDDM KCM
2. click on "Change background" button of current SDDM theme
3. click on "Load from file..." button and choose another background
4. close "Change background" popup

OBSERVED RESULT
background chosen in the step 3 cannot be applied because "Apply" button
is greyed out.

EXPECTED RESULT
active "Apply" button after the last step

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.21.80
KDE Frameworks Version: 5.79.0
Qt Version: 5.15.2
Comment 1 Nate Graham 2021-01-26 00:04:34 UTC
Can reproduce.
Comment 2 Bug Janitor Service 2021-01-26 10:17:53 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/sddm-kcm/-/merge_requests/5
Comment 3 David Redondo 2021-01-26 15:54:06 UTC
Git commit c364382b47929b76dba3428a81e8abad2283f3ac by David Redondo.
Committed on 26/01/2021 at 10:15.
Pushed by ngraham into branch 'master'.

Indicate that we need saving when background changes
FIXED-IN:5.21

M  +4    -0    src/sddmkcm.cpp

https://invent.kde.org/plasma/sddm-kcm/commit/c364382b47929b76dba3428a81e8abad2283f3ac
Comment 4 Nate Graham 2021-01-26 15:54:41 UTC
Git commit faef7d3c29a3e0eaab493ec55bea74a4cee98c58 by Nate Graham, on behalf of David Redondo.
Committed on 26/01/2021 at 15:54.
Pushed by ngraham into branch 'Plasma/5.21'.

Indicate that we need saving when background changes
FIXED-IN:5.21


(cherry picked from commit c364382b47929b76dba3428a81e8abad2283f3ac)

M  +4    -0    src/sddmkcm.cpp

https://invent.kde.org/plasma/sddm-kcm/commit/faef7d3c29a3e0eaab493ec55bea74a4cee98c58