Indicate that we need saving when background changes

BUG:432112
FIXED-IN:5.21